# backend

./: Dockerfile  README.md  pyproject.toml
src/: config.py  main.py
src/managers/: data_managers.py
src/routes/: log_routes.py
src/schemas/: web_log.py
src/services/: log_service.py
src/services/file/: abstract_file.py  csv.py
templates/: main_template.html
